[tool.poetry]
name = "cgtwq"
version = "3.0.0-beta.1"
description = "CGTeamWork python client for humans."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"
wlf = { git = "https://github.com/WuLiFang/wlf", tag = "0.5.3" }
requests = "~=2.19"
websocket-client = "~=0.47"
"Qt.py" = "~=1.1"
environs = "~=4.2.0"

[tool.poetry.dev-dependencies]
pytest = [
  {version="^4", python="^2"},
  {version="^5", python="^3"},
]
pylint = [
  {version="^1", python="^2"},
  {version="^2", python="^3"},
]
mock = [
  {version="^2", python="^2"},
]
pytest-cov = "^2.10.0"
tox = "^3.15.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

