[metadata]
name = cgtwq
version = 3.0.0-beta.4
description = CGTeamWork python client for humans.
author = NateScarlet
author_email = NateScarlet@Gmail.com

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
install_requires =
 Qt.py>=1.1,<2.0
 environs>=4.2.0,<4.3.0
 requests>=2.19,<3.0
 websocket-client>=0.47,<1.0
 wlf @ git+https://github.com/WuLiFang/wlf@v0.6.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
